Deploy/Architecture-basic/rds-base-azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Administrator Username"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Administrator Password. The supplied password must be between 8-123 characters long and must satisfy at least 3 of password complexity requirements from the following: contains an uppercase character, contains a lowercase character, contains a numeric digit or contains a special character."
      }
    },
    "domainName": {
      "type": "string",
      "metadata": {
        "description": "The FQDN of the AD Domain created. The domain name must contain a dot '.' like 'example.local'."
      }
    },
    "dnsLabelPrefix": {
      "type": "string",
      "metadata": {
        "description": "Unique gateway public DNS prefix for the deployment. The fqdn will look something like '<dnsname>.<location>.cloudapp.azure.com'. Up to 62 chars, digits or dashes, lowercase, should start with a letter: must conform to '^[a-z][a-z0-9-]{1,61}[a-z0-9]$'."
      }
    },
    "Frontend-Backend-VmSize": {
      "type": "string",
      "allowedValues": [
        "Standard_D1_v2",
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_D5_v2"
      ],
      "metadata": {
        "description": "The size of the Frontend and Backend VMs"
      },
      "defaultValue": "Standard_D2_v2"
    },
    "RDSH-VmSize": {
      "type": "string",
      "allowedValues": [
        "Standard_D3_v2",
        "Standard_D4_v2",
        "Standard_D5_v2",
        "Standard_D12_v2",
        "Standard_D13_v2",
        "Standard_D14_v2",
        "Standard_NV6",
        "Standard_NV12"
      ],
      "metadata": {
        "description": "The size of the SessionHost VMs"
      },
      "defaultValue": "Standard_D12_v2"
    }
  },
  "variables": {
    "resourcesPrefix": "[uniquestring(resourceGroup().id)]",
    "mainStorageAccount": {
      "Name": "[concat(variables('resourcesPrefix'), 'msa')]",
      "Type": "Standard_LRS"
    },
    "vNet": {
      "Name": "RDS-VNET",
      "Prefix": "10.2.0.0/18"
    },
    "Subnets": [
      {
        "name": "frontend",
        "properties": {
          "addressPrefix": "10.2.2.0/24",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgFrontendName'))]"
          }
        }
      },
      {
        "name": "backend",
        "properties": {
          "addressPrefix": "10.2.4.0/24",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgBackendName'))]"
          }
        }
      },
      {
        "name": "sessionhost",
        "properties": {
          "addressPrefix": "10.2.6.0/24",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSessionHostsName'))]"
          }
        }
      }
    ],
    "Template.Uri": "https://raw.githubusercontent.com/intelequia/VirtualLabs/master/Deploy/Architecture-basic/Templates/",
    "DCTemplate.Uri":"[concat(variables('Template.Uri'), 'rds-ad-azuredeploy.json')]",
    "FETemplate.Uri":"[concat(variables('Template.Uri'), 'rds-fe-azuredeploy.json')]",
    "BETemplate.Uri":"[concat(variables('Template.Uri'), 'rds-be-azuredeploy.json')]",
    "SHTemplate.Uri":"[concat(variables('Template.Uri'), 'rds-sh-azuredeploy.json')]",
    "Configuration.Uri": "https://raw.githubusercontent.com/intelequia/VirtualLabs/master/Deploy/Architecture-basic/Configuration/",
    "DCSubdeploymentName": "DCSubdeployment",
    "FESubdeploymentName": "FESubdeployment",
    "BESubdeploymentName": "BESubdeployment",
    "SHSubdeploymentName": "SHSubdeployment",
    "nsgSessionHostsName": "sessionhosts-nsg",
    "nsgBackendName": "backend-nsg",
    "nsgFrontendName": "frontend-nsg"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('mainStorageAccount').Name]",
      "apiVersion": "2016-01-01",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('mainStorageAccount').Type]"
      },
      "kind": "Storage"
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vNet').Name]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vNet').Prefix]"
          ]
        },
        "subnets": "[variables('Subnets')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgFrontendName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgBackendName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgSessionHostsName'))]"
      ]
    },
    {
      "apiVersion": "2016-09-01",
      "name": "[variables('DCSubdeploymentName')]",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('DCTemplate.Uri')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "storageAccountName": {
            "value": "[variables('mainStorageAccount').Name]"
          },
          "vnetName": {
            "value": "[variables('vNet').Name]"
          },
          "subnetName": {
            "value": "[variables('Subnets')[0].name]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "domainName": {
            "value": "[parameters('domainName')]"
          },
          "subnets": {
            "value": "[variables('subnets')]"
          },
          "Configuration.Uri": {
            "value": "[variables('Configuration.Uri')]"
          },
          "Template.Uri": {
            "value": "[variables('Template.Uri')]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('mainStorageAccount').Name)]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet').Name)]"
      ]
    },
    {
      "apiVersion": "2016-09-01",
      "name": "[variables('FESubdeploymentName')]",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('FETemplate.Uri')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "storageAccountName": {
            "value": "[variables('mainStorageAccount').Name]"
          },
          "vnetName": {
            "value": "[variables('vNet').Name]"
          },
          "subnetName": {
            "value": "[variables('Subnets')[0].name]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "domainName": {
            "value": "[parameters('domainName')]"
          },
          "publicDNS": {
            "value": "[parameters('dnsLabelPrefix')]"
          },
          "VmSize": {
            "value": "[parameters('Frontend-Backend-VmSize')]"
          },
          "Configuration.Uri": {
            "value": "[variables('Configuration.Uri')]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('mainStorageAccount').Name)]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet').Name)]",
        "[resourceId('Microsoft.Resources/deployments', 'DCSubDeployment' )]"
      ]
    },
    {
      "apiVersion": "2016-09-01",
      "name": "[variables('BESubdeploymentName')]",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('BETemplate.Uri')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "storageAccountName": {
            "value": "[variables('mainStorageAccount').Name]"
          },
          "vnetName": {
            "value": "[variables('vNet').Name]"
          },
          "subnetName": {
            "value": "[variables('Subnets')[1].name]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "domainName": {
            "value": "[parameters('domainName')]"
          },
          "VmSize": {
            "value": "[parameters('Frontend-Backend-VmSize')]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('mainStorageAccount').Name)]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet').Name)]",
        "[resourceId('Microsoft.Resources/deployments', 'DCSubDeployment' )]"
      ]
    },
    {
      "apiVersion": "2016-09-01",
      "name": "[variables('SHSubdeploymentName')]",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[variables('SHTemplate.Uri')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "storageAccountName": {
            "value": "[variables('mainStorageAccount').Name]"
          },
          "vnetName": {
            "value": "[variables('vNet').Name]"
          },
          "subnetName": {
            "value": "[variables('Subnets')[2].name]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "domainName": {
            "value": "[parameters('domainName')]"
          },
          "VmSize": {
            "value": "[parameters('RDSH-VmSize')]"
          },
          "Configuration.Uri": {
            "value": "[variables('Configuration.Uri')]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('mainStorageAccount').Name)]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vNet').Name)]",
        "[resourceId('Microsoft.Resources/deployments', 'DCSubDeployment' )]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgSessionHostsName')]",
      "apiVersion": "2017-03-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Inbound-RPC-RDHOST",
            "properties": {
              "description": "Allow RPC-RDHOST",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-RDP",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-AD-389",
            "properties": {
              "description": "Allow AD-389",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-AD-636",
            "properties": {
              "description": "Allow AD-636",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "636",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-WMI",
            "properties": {
              "description": "Allow WMI",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgBackendName')]",
      "apiVersion": "2017-03-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Inbound-RDP",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-HTTPS",
            "properties": {
              "description": "Allow HTTPS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-RDWEB",
            "properties": {
              "description": "Allow RDWEB",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "5504",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-RPC-RDHOST",
            "properties": {
              "description": "Allow RPC-RDHOST",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-WMI",
            "properties": {
              "description": "Allow WMI",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-RPC-RDSH",
            "properties": {
              "description": "Allow RPC-RDSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "135",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-SMB",
            "properties": {
              "description": "Allow SMB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 160,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-NetBIOS",
            "properties": {
              "description": "Allow NetBIOS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "139",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 170,
              "direction": "Inbound"
            }
          },
          {
            "name": "Outbound-RDWeb",
            "properties": {
              "description": "Allow NetBIOS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "5504",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-RDP",
            "properties": {
              "description": "Allow RDP",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-RPC-RDHOST",
            "properties": {
              "description": "Allow RPC-RDHOST",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgFrontendName')]",
      "apiVersion": "2017-03-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Inbound-RDP",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-HTTP",
            "properties": {
              "description": "Allow HTTP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-HTTPS",
            "properties": {
              "description": "Allow HTTPS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-RDP-UDP",
            "properties": {
              "description": "Allow RDP/UDP",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "3391",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Inbound-WMI",
            "properties": {
              "description": "Allow WMI",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "Outbound-Kerberos",
            "properties": {
              "description": "Allow Kerberos",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "88",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-RPC",
            "properties": {
              "description": "Allow RPC",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "135",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-LDAP",
            "properties": {
              "description": "Allow LDAP",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-DNS",
            "properties": {
              "description": "Allow DNS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Outbound"
            }
          },
          {
            "name": "Outbound-NPS",
            "properties": {
              "description": "Allow NPS",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "1812-1813",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Outbound"
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "RDBE-VM01/InitializeRDS",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'FESubdeployment' )]",
        "[resourceId('Microsoft.Resources/deployments', 'BESubdeployment' )]",
        "[resourceId('Microsoft.Resources/deployments', 'SHSubdeployment' )]"
      ],
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.11",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "ModulesUrl": "[concat(variables('Configuration.Uri'),'ConfigurationBE.zip')]",
          "ConfigurationFunction": "ConfigurationBE.ps1\\RDSDeploy",
          "Properties": {
            "adminCreds": {
              "UserName": "[parameters('adminUsername')]",
              "Password": "PrivateSettingsRef:adminPassword"
            },
            "connectionBroker": "[concat('RDBE-VM01.',parameters('domainName'))]",
            "domainName": "[parameters('domainName')]",
            "externalfqdn": "[reference(variables('FESubdeploymentName')).outputs.publicFQDN.value]",
            "nameSessionHost1": "[concat('RDSH-VM01.',parameters('domainName'))]",
            "nameSessionHost2": "[concat('RDSH-VM02.',parameters('domainName'))]",
            "webAccessServer": "[concat('RDFE-VM01.',parameters('domainName'))]"
          }
        },
        "protectedSettings": {
          "Items": {
            "adminPassword": "[parameters('adminPassword')]"
          }
        }
      }
    }
  ],
  "outputs": {}
}
